kubernetes/apps/network/envoy-gateway/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: network
  labels:
    istio.io/dataplane-mode: ambient
    name: network
    pod-security.kubernetes.io/enforce: privileged
