kubernetes/apps/network/envoy-gateway/app/policies.yaml
---
# Backend Traffic Policy
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: mimir-backend
spec:
  compression:
    - type: Gzip
  circuitBreaker:
    maxConnections: 2048
    maxPendingRequests: 2048
  loadBalancer:
    type: LeastRequest
  timeout:
    tcp:
      connectTimeout: 10s
    http:
      connectionIdleTimeout: 60s
      maxConnectionDuration: 3600s
  retry:
    numRetries: 3
    retryOn:
      httpStatusCodes:
        - 502
        - 503
        - 504
      triggers:
        - connect-failure
        - refused-stream
        - reset
    perRetry:
      timeout: 10s
      backOff:
        baseInterval: 100ms
        maxInterval: 10s
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        app: mimir
